# VaseMuseum

./: .gitignore  README.md  index.html
DigitalExhibition/: README.md  controls.html  exhibition.css  exhibition_chat_server.py  index.html
DigitalExhibition/js/: exhibition.js
css/: app.css
dataset/data/: amb_100.json  amb_100_flat.jsonl  grpo_tf_100x6.json  grpo_tf_600_flat.jsonl  grpo_tf_600_flat_10.jsonl  raw.json  v_only_100.json  v_only_100_flat.jsonl  vk_100.json  vk_100_flat.jsonl
js/: app.js  exhibition.js
retriever/: README.md  __init__.py  build_corpus.py  caption.py  cli.py  index.py  io_csv.py  local_llm.py  pipeline.py  types.py
vase-agent/: .env.example  agent_prompt.py  agent_run.py  experience.sh  infer.sh  llm_env.py  main.py  pyproject.toml  xml_tool_calls.py
vase-agent/core/: __init__.py  context.py  response_control.py  source_control.py
vase-agent/metrics/: __init__.py  llm_judge.py
vase-agent/scripts/: run_paper_experiments.py  run_tf_grpo_accumulate.py
vase-agent/scripts/training_free_grpo/: __init__.py  _bootstrap.py  control_profiles.py  experience_updater.py  pipeline.py  prompts_embedded.py  resume_state.py  reward.py  trajectory_format.py  types.py
vase-agent/tools/: local_text_search.py  serp_cache.py  serp_image.py  serp_search.py  vase_tool_call.py  visit_extract.py
vllm_run/: call_vllm_api.sh  start_vllm_api.sh
