[project]
name = "vase-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "serpapi>=1.0.2",
    "tqdm>=4.67.0",
]
